--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -65,3 +65,34 @@
 64: Chuck the plant
 65: loose panel
 66: cassette tape
+67: stairs
+68: painting of edna
+69: It's firmly attached to the wall.
+70: painting of fred
+71: easel
+72: bowl of wax fruit
+73: paint brush
+74: paint remover
+75: I can't pick that up.
+76: crate
+77: sketch
+78: old record
+79: vase
+80: I'd better not...
+81: ...it's obviously a valuable antique!
+82: piano
+83: I can't play that thing!
+84: TV
+85: Hi all you budding writers, musicians,
+86: and game designers!
+87: I'm Mark Eteer and my company...
+88: ...will publish ANYTHING!
+89: Just mail it to the address shown below.
+90: Don't forget the stamp!
+91: statue
+92: plaque on statue
+93: It's too heavy to move.
+94: Maybe there's a plaque somewhere.
+95: Si trouve, envoyez-le au Louvre,
+96: poste paye.
+97: Green Tentacle
