--- a/mmansion/assets/sprites.yaml
+++ b/mmansion/assets/sprites.yaml
@@ -50,6 +50,10 @@ sprites:
             anchor: [11,0]
           - tex: [155,110,22,29]
             anchor: [11,0]
+      talk_n:
+        frames:
+          - tex: [51,108,22,26]
+            anchor: [11,0]
   bernard_body:
     ticks: *ticks
     animations:
@@ -376,7 +380,7 @@ sprites:
           - tex: [21,467,18,44]
             anchor: [9,0]
   tentacle:
-    ticks: *ticks
+    #ticks: *ticks
     animations:
       idle:
         frames:
@@ -403,9 +407,16 @@ multi_sprites:
         link: 0
     animations:
       # animations where all subanims are the same can be omitted
-      talk_s: [ idle_s, idle_s, talk_s ]
-      talk_e: [ idle_e, idle_e, talk_e ]
-      talk_n: [ idle_n, idle_n, idle_n ]
+      idle:
+        0: idle
+        1: idle
+      walk:
+        0: walk
+        1: walk
+      talk:
+        2: talk
+      quiet:
+        2: idle
   bernard:
     nodes:
       - sprite: bernard_legs
@@ -417,9 +428,16 @@ multi_sprites:
         link: 0
     animations:
       # animations where all subanims are the same can be omitted
-      talk_s: [ idle_s, idle_s, talk_s ]
-      talk_e: [ idle_e, idle_e, talk_e ]
-      talk_n: [ idle_n, idle_n, idle_n ]
+      idle:
+        0: idle
+        1: idle
+      walk:
+        0: walk
+        1: walk
+      talk:
+        2: talk
+      quiet:
+        2: idle
 
 
 
