--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -96,3 +96,10 @@
 95: Si trouve, envoyez-le au Louvre,
 96: poste paye.
 97: Green Tentacle
+98: You can't pass until you feed me!
+99: Oomph!
+100: Thanks! More food!
+101: WOW! My favorite! THAT's what I wanted!
+102: No thanks. It makes me burp.
+103: Now I'm thirsty!
+104: Where's my drink!
