--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -103,3 +103,10 @@
 102: No thanks. It makes me burp.
 103: Now I'm thirsty!
 104: Where's my drink!
+105: Thanks!
+106: lovely plant
+107: wanted poster
+108: "WANTED: For terrible acts of violence…"
+109: …one murderous purple slimy meteor.
+110: If found, call 1977.
+111: dime
