--- a/mmansion/assets/rooms.yaml
+++ b/mmansion/assets/rooms.yaml
@@ -251,8 +251,17 @@ radio:
   size: [368, 136]
   batch: radio
   walkarea:
-    poly: [0,0,368,0,368,14,314,32,306,32,306,24,203,24,198,32,72,32,72,26,186,26,165,14,20,14,0,8]
+    poly: [0,0,368,0,368,14,314,32,306,32,306,24,203,24,198,32,72,32,72,26,186,26,165,14,20,14,20,136,18,136,18,14,11,14,0,8]
   items:
     - bg:
         batch: radio
         quad: [0,0,368,136]
+tentacle:
+  size: [640, 136]
+  batch: tentacle
+  walkarea:
+    poly: [0,0,640,0,640,3,553,32,418,32,418,22,220,22,220,32,86,32,0,3]
+  items:
+    - bg:
+        batch: tentacle
+        quad: [0,0,640,136]
