--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -110,3 +110,8 @@
 109: …one murderous purple slimy meteor.
 110: If found, call 1977.
 111: dime
+112: ladder
+113: hatch
+114: record
+115: Tentacle mating calls.
+116: yellow key
