--- a/mmansion/assets/music.yaml
+++ b/mmansion/assets/music.yaml
@@ -15,3 +15,11 @@ sprites:
       open:
         frames:
           - tex: [350,137,26,96]
+  cassette_recorder:
+    animations:
+      off:
+        frames:
+          - tex: [218,168,30,7]
+      recording:
+        frames:
+          - tex: [249,168,30,7]
