--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -115,3 +115,10 @@
 114: record
 115: Tentacle mating calls.
 116: yellow key
+117: Hunk-O-Matic Machine (TM)
+118: Ah. I feel much stronger now!
+119: Victrola
+120: cassette recorder
+121: There's no tape in the recorder.
+122: OK, it's recording.
+123: It stopped recording.
