--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -122,3 +122,13 @@
 121: There's no tape in the recorder.
 122: OK, it's recording.
 123: It stopped recording.
+124: There's no record on the Victrola.
+125: It's still playing!
+126: Ouch!
+127: cabinet door
+128: cassette player
+129: There's no tape in the player.
+130: chandelier
+131: broken chandelier
+132: old rusty key
+133: I can't reach it.
